# drops.py

./: .travis.yml  CMakeLists.txt  README.md  drops.py
drops_py/: defaults.py  defaults_Ghan_et_al_1998.py  defaults_Kreidenweis_et_al_2003.py  distros.py  output.py  parcel.py  quicklook.gpi  rhs_blk_2m.py  rhs_lgrngn.py
output_testing/: compare_reftest.py  readme  readme.md
output_testing/test_nt1_ref/: readme  readme.md  readme~
output_testing/test_nt1_ref/hdf_output/: sounding.hdf  spec_drywet.hdf
output_testing/test_ref/: readme  readme.md
output_testing/test_ref/hdf_output/: sounding.hdf  spec_drywet.hdf
src/: analytical_equations.py  output.py  parcel.py  quicklook.gpi  rhs_lgrngn.py
tests/: CMakeLists.txt  issue_26.py  issue_47.py
